--- a/CHE9000WAP/CHE9000WAP.csproj
+++ b/CHE9000WAP/CHE9000WAP.csproj
@@ -203,14 +203,25 @@
     <AndroidResource Include="Resources\Values\Strings.xml" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\Drawable\Icon.png" />
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="Properties\AndroidManifest.xml">
       <SubType>Designer</SubType>
     </Content>
     <Content Include="PUB\Mono.Data.Sqlite.dll" />
     <Content Include="PUB\ReadMe.txt" />
+    <AndroidResource Include="Resources\Values\color.xml" />
+    <AndroidResource Include="Resources\Drawable\icon_logo.png" />
+    <AndroidResource Include="Resources\Drawable\bg_edittext.xml" />
+    <AndroidResource Include="Resources\Drawable\bg_edittext_normal.xml" />
+    <AndroidResource Include="Resources\Drawable\bg_edittext_focused.xml" />
+    <AndroidResource Include="Resources\Drawable\shape_bottom_corner_no_top_line.xml" />
+    <AndroidResource Include="Resources\Drawable\shape_top_corner_no_bottom_line.xml" />
+    <AndroidResource Include="Resources\Drawable\shape_no_corner_without_bottom.xml" />
+    <AndroidResource Include="Resources\Drawable\shape_button.xml" />
+    <AndroidResource Include="Resources\Drawable\icon_menu_act.png" />
+    <AndroidResource Include="Resources\Drawable\icon_user.png" />
+    <AndroidResource Include="Resources\Drawable\icon_menu.png" />
+    <AndroidResource Include="Resources\Drawable\icon_user_act.png" />
+    <AndroidResource Include="Resources\Drawable\Icon.png" />
     <None Include="Web References\CHE9000\CHE9000.disco" />
   </ItemGroup>
   <ItemGroup>
@@ -231,6 +242,7 @@
       </CachedSettingsPropName>
     </WebReferenceUrl>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
      Other similar extension points exist, see Microsoft.Common.targets.
