--- a/CHE9000WAP/Properties/AndroidManifest.xml
+++ b/CHE9000WAP/Properties/AndroidManifest.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto" android:versionCode="1" android:versionName="1.0">
 	<uses-sdk />
-	<application android:label="CHE9000.COM" android:icon="@drawable/Icon"></application>
+	<application android:label="CHE9000.COM" android:icon="@drawable/icon_logo"></application>
 	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.INTERNET" />
